fix: visible profile buttons

--- a/public/components/Profile/Profile.scss
+++ b/public/components/Profile/Profile.scss
@@ -52,21 +52,6 @@
         a {
             color: var(--main-color)
         }
-        .remove-friend {
-            display: none;
-        }
-        
-        .accept-friend {
-            display: none;
-        }
-        
-        .unsubscribe-friend {
-            display: none;
-        }
-        
-        .subscribe-friend {
-            display: none;
-        }
     }
 
     &__posts-header {
